trunk/Archive2/13/4393eeefbfefbe/output
main.cpp:7:19: error: variable or field 'addLine' declared void
 void addLine(std::vector<std::array<int>,3>& buses)
                   ^
main.cpp:7:14: error: 'vector' is not a member of 'std'
 void addLine(std::vector<std::array<int>,3>& buses)
              ^
main.cpp:7:40: error: wrong number of template arguments (1, should be 2)
 void addLine(std::vector<std::array<int>,3>& buses)
                                        ^
In file included from main.cpp:5:0:
/usr/local/include/c++/4.9.2/array:81:12: error: provided for 'template<class _Tp, long unsigned int _Nm> struct std::array'
     struct array
            ^
main.cpp:7:46: error: 'buses' was not declared in this scope
 void addLine(std::vector<std::array<int>,3>& buses)
                                              ^
